@@ -387,15 +387,23 @@ class ExternalIdentityMixin(BaseModel):
         return sa.Column(sa.String(255), default=u'')
 
     @classmethod
-    def by_username_and_provider(cls, external_user_name, provider_name=None,
+    def by_username_and_provider(cls, external_user_name, provider_name,
+                                 db_session=None):
+        db_session = get_db_session(db_session)
+        q = db_session.query(cls)
+        q = q.filter(cls.external_user_name == external_user_name)
+        q = q.filter(cls.provider_name == provider_name)
+        return q.first()
+
+    @classmethod
+    def user_by_username_and_provider(cls, external_user_name, provider_name,
                                  db_session=None):
         db_session = get_db_session(db_session)
         q = db_session.query(cls.User)
         q = q.filter(cls.external_user_name == external_user_name)
         q = q.filter(cls.User.user_name == cls.local_user_name)
-        if provider:
-            q = q.filter(cls.provider_name == provider_name)
-        return q
+        q = q.filter(cls.provider_name == provider_name)
+        return q.first()
 
 
 class GroupMixin(BaseModel):
